[package]
name = "blockchain"
version = "0.1.0"
authors = ["kyzdra <kyzdra@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "1.9" # To remove
generic-array = "0.12"
hex-literal = "0.2.1"
log = "0.4.8"
merkletree = "0.17.1"
rand = "0.7.3"
sha2 = "0.8.1"
