[package]
name = "blockchain"
version = "0.1.0"
authors = ["kyzdra <kyzdra@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# colored = "1.9"
env_logger = "0.7.1"
generic-array = "0.12"
hex = "0.3.1"
# hex-literal = "0.2.1"
# itertools = "0.9.0"
log = "0.4.8"
# merkletree = "0.17.1"
merkle-cbt = "0.2.1"
petgraph = "0.5.1"
rand = "0.7.3"
rand_core = "0.5.1"
secp256k1 = { version = "0.17.2", features = ["rand"] }
# serde = "1.0.106"
sha2 = "0.8.1"

# [features]
# default = ["rand"]