[package]
name = "blockchain"
version = "0.1.0"
authors = ["kyzdra <kyzdra@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
generic-array = "0.12"
log = "0.4.8"
merkle-cbt = "0.2.1"
rand = "0.7.3"
rand_core = "0.5.1"
secp256k1 = { version = "0.17.2", features = ["rand"] }
sha2 = "0.8.1"